footer iframe jotform validation

--- a/public/index.html
+++ b/public/index.html
@@ -730,9 +730,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             
 
 <!-- JotForm embedded version -->
-<form novalidate="true" class="jotform-form" action="https://submit.jotform.us/submit/60207375294153/" method="post" name="form_60207375294153" id="60207375294153" accept-charset="utf-8" target="_blank">
+<form class="jotform-form" action="https://submit.jotform.us/submit/60207375294153/" method="post" name="form_60207375294153" id="60207375294153" accept-charset="utf-8" target="_blank">
   <input name="formID" value="60207375294153" type="hidden">
-          <input placeholder="your@email.address" class=" form-textbox validate[Email]" id="input_1" name="q1_input1" style="width: 180px" value="" type="email" required>
+          <input placeholder="your@email.address" class=" form-textbox validate[Email]" id="input_1" name="q1_input1" style="width: 180px" value="" type="email" required aria-required="true">
             <button id="input_2" type="submit" class="btn-u btn-u-black ls-s-1" style="width: 180px;margin-top: 9px">
               Stay In Touch
             </button>
