--- a/public/index.html
+++ b/public/index.html
@@ -808,7 +808,62 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <h4 class="modal-title" id="myModalLabel">Join Us on Brave</h4>
                 </div>
                 <div class="modal-body">
-                    <script type="text/javascript" src="https://form.jotform.com/jsform/60194867956169"></script>
+
+
+
+<form class="form-horizontal" action="https://submit.jotform.us/submit/60194867956169/" method="post" name="form_60194867956169" id="60194867956169" accept-charset="utf-8" target="_blank" onsubmit="location.reload()">
+  <input name="formID" value="60194867956169" type="hidden">
+  <div class="form-group">
+    <label for="inputName" class="col-sm-2 control-label">Name</label>
+    <div class="col-sm-10">
+      <input name="q6_name" type="text" class="form-control" id="inputName" placeholder="Name">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+    <div class="col-sm-10">
+      <input name="q4_email" type="email" class="form-control" id="inputEmail" placeholder="Email" required aria-required="true">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="checkbox">
+        <label>
+          <input class="form-checkbox" id="input_5_0" name="q5_operatingSystems[]" value="Android" type="checkbox"> Android
+        </label>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input class="form-checkbox" id="input_5_1" name="q5_operatingSystems[]" value="iOS" type="checkbox"> iOS
+        </label>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input class="form-checkbox" id="input_5_2" name="q5_operatingSystems[]" value="OS X (Mac)" type="checkbox"> OS X (Mac)
+        </label>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input class="form-checkbox" id="input_5_3" name="q5_operatingSystems[]" value="Windows" type="checkbox"> Windows
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+  </div>
+  <input id="simple_spc" name="simple_spc" value="60194867956169-60194867956169" type="hidden">
+  <script type="text/javascript">
+  document.getElementById("si" + "mple" + "_spc").value = "60194867956169-60194867956169";
+  </script>
+  <input value="1453431916271_60194867956169_0WLVSv5" name="event_id" type="hidden">
+</form>
+
+
+
+
                 </div>
             </div>
         </div>
