continued info in timeline, button text change in index

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
             <!-- mobile slide alternative -->
-            <div id="layerslidermobile" style="width: 100%; height: 1300px; margin: 0px auto; background-color:#4F6288">
+            <div id="layerslidermobile" style="width: 100%; height: 1260px; margin: 0px auto; background-color:#4F6288">
                 <div class="ls-slide mobile-width-slide">
 
                     <span class="ls-s-1" style="color: #ffffff;
@@ -184,7 +184,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                                 slideoutdirection : bottom;
                                                 durationin : 2000;
                                                 durationout : 2000; ">
-                        Sign Up for Beta</a>
+                        Request a Dev Build!</a>
 
     <!-- YouTube/Vimeo video -->
     <div class="ls-l" data-ls="offsetxin: 400; offsetyin: 150;" style=" 
@@ -238,7 +238,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <a class="btn-u btn-u-black ls-s-1" href="#about" style=" 
                                         padding: 8px 18px; 
-                                        font-size:18px; 
+                                        font-size:17px; 
                                         top:440px; 
                                         left: 50px; 
                                         slidedirection : bottom; 
@@ -248,24 +248,24 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 Learn More</a>
             <a class="btn-u btn-u-black ls-s-1" data-toggle="modal" data-target="#mailchimpModal" href="#" style="
                                         padding: 8px 18px;
-                                        font-size:18px;
+                                        font-size:17px;
                                         top:440px;
                                         left: 183px;
                                         slidedirection : bottom;
                                         slideoutdirection : bottom;
                                         durationin : 2000;
                                         durationout : 2000; ">
-                Sign Up for Beta</a>
+                Request a Dev Build!</a>
             <a class="btn-u btn-u-black ls-s-1" href="#devs" style=" 
                                         padding: 8px 18px; 
-                                        font-size:18px;     
+                                        font-size:17px;     
                                         top:440px; 
-                                        left:357px; 
+                                        left:387px; 
                                         slidedirection : bottom; 
                                         slideoutdirection : bottom; 
                                         durationin : 2000; 
                                         durationout : 2000; ">
-                I'm a Developer</a>
+                Developer Info</a>
 
 
 
