Get rid of timeline empty list items

--- a/public/dev_timeline.html
+++ b/public/dev_timeline.html
@@ -182,7 +182,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                        
                                     </ul>
                                 </div>
-                            <HR><HR><BR>
+                                <HR><HR>
                             <div class="row">
                                 <div class="col-md-4">
                                     <p>Dev Channel</p>
@@ -322,15 +322,15 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         <li><i class="fa fa-check color-green"></i> Wallets &amp; Payment System</li>
                                         <li><i class="fa fa-check color-green"></i> Safe Browsing integration</li>
                                         <li><i class="fa fa-check color-green"></i> Password management</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
                                     </ul>
                                 </div>
                                <div class="col-sm-6">
                                     <ul class="list-unstyled">
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
                                     </ul>
                                 </div>
 
@@ -379,16 +379,16 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <ul class="list-unstyled">
                                         <li><i class="fa fa-check color-green"></i> Anonymous Confirmation System</li>
                                         <li><i class="fa fa-check color-green"></i> Monthly accounting UI (AdFree mode)</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
                                     </ul>
                                 </div>
                                <div class="col-sm-6">
                                     <ul class="list-unstyled">
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
                                     </ul>
 
                             </div>
@@ -438,15 +438,15 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         <li><i class="fa fa-check color-green"></i> Import from other browsers</li>
                                         <li><i class="fa fa-check color-green"></i> Signals viewer UI</li>
                                         <li><i class="fa fa-check color-green"></i> Script blocking</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
                                     </ul>
                                 </div>
                                <div class="col-sm-6">
                                     <ul class="list-unstyled">
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
                                     </ul>
                                 </div>
 
@@ -554,17 +554,11 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="col-sm-6">
                                     <ul class="list-unstyled">
                                         <li><i class="fa fa-check color-green"></i> TBD</li>
-                                        <li><i class="fa fa-check color-green"></i> TBD</li>
-                                        <li><i class="fa fa-check color-green"></i> TBD</li>
-                                        <li><i class="fa fa-check color-green"></i> TBD</li>
                                     </ul>
                                 </div>
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled">
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> ---</li>
                                     </ul>
                                 </div>
                             <HR><HR><BR>
@@ -613,17 +607,11 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="col-sm-6">
                                     <ul class="list-unstyled">
                                         <li><i class="fa fa-check color-green"></i> TBD</li>
-                                        <li><i class="fa fa-check color-green"></i> TBD</li>
-                                        <li><i class="fa fa-check color-green"></i> TBD</li>
-                                        <li><i class="fa fa-check color-green"></i> TBD</li>
                                     </ul>
                                 </div>
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled">
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
-                                        <li><i class="fa fa-check color-green"></i> ---</li>
+                                        <li class="invisible"><i class="fa fa-check color-green"></i> TBD</li>
                                     </ul>
                                 </div>
                             <HR><HR><BR>
