Fix menu item highlighting

--- a/public/index.html
+++ b/public/index.html
@@ -83,27 +83,29 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div id="fullsize-menu" class="collapse navbar-collapse navbar-ex1-collapse">
                 <div class="menu-container">
                     <ul class="nav navbar-nav brave-nav" style="">
+                        
                         <li class="home">
-                            <a href="index.html#body">Introducing Brave</a>
+                            <a href="#body">Introducing Brave</a>
                         </li>
                         <li>
-                            <a href="index.html#faster">Faster</a>
+                            <a href="#faster">Faster</a>
                         </li>
                         <li>
-                            <a href="index.html#safer">Safer</a>
+                            <a href="#safer">Safer</a>
                         </li>
 
                          <li>
-                            <a href="index.html#devs">Developers</a>
+                            <a href="#devs">Developers</a>
                         </li>
                         <li>
-                            <a href="index.html#team">Team</a>
+                            <a href="#team">Team</a>
 
                         </li>
                           <li>
-                            <a href="index.html#about">About</a>
+                            <a href="#about">About</a>
 
                         </li>
+
                         <li>
                             <a href="FAQ.html">FAQ</a>
 
