new mailchimp api and ajax web form

--- a/public/privacypolicy.html
+++ b/public/privacypolicy.html
@@ -224,18 +224,18 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                             
 
-<!-- JotForm embedded version -->
-<form class="jotform-form" action="https://submit.jotform.us/submit/60207375294153/" method="post" name="form_60207375294153" id="60207375294153" accept-charset="utf-8" target="_blank">
-  <input name="formID" value="60207375294153" type="hidden">
-          <input placeholder="your@email.address" class=" form-textbox validate[Email]" id="input_1" name="q1_input1" style="width: 180px" value="" type="email" required aria-required="true">
-            <button id="input_2" type="submit" class="btn-u btn-u-black ls-s-1" style="width: 180px;margin-top: 9px">
-              Stay In Touch
-            </button>
-  <input id="simple_spc" name="simple_spc" value="60207375294153-60207375294153" type="hidden">
-  <script type="text/javascript">
-  document.getElementById("si" + "mple" + "_spc").value = "60207375294153-60207375294153";
-  </script>
-<input value="1453425133660_60207375294153_f66GtFt" name="event_id" type="hidden"></form>
+                            <!-- JotForm embedded version -->
+                            <form class="jotform-form" action="https://submit.jotform.us/submit/60207375294153/" method="post" name="form_60207375294153" id="60207375294153" accept-charset="utf-8" target="_blank">
+                              <input name="formID" value="60207375294153" type="hidden">
+                                      <input placeholder="your@email.address" class=" form-textbox validate[Email]" id="input_1" name="q1_input1" style="width: 180px" value="" type="email" required aria-required="true">
+                                        <button id="input_2" type="submit" class="btn-u btn-u-black ls-s-1" style="width: 180px;margin-top: 9px">
+                                          Stay In Touch
+                                        </button>
+                              <input id="simple_spc" name="simple_spc" value="60207375294153-60207375294153" type="hidden">
+                              <script type="text/javascript">
+                              document.getElementById("si" + "mple" + "_spc").value = "60207375294153-60207375294153";
+                              </script>
+                            <input value="1453425133660_60207375294153_f66GtFt" name="event_id" type="hidden"></form>
 
 
 
@@ -269,13 +269,13 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     <i class="fa fa-facebook"></i>
                                 </a>
                             </li>
-<!--
+                            <!--
                             <li>
                                 <a href="#" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Google Plus">
                                     <i class="fa fa-google-plus"></i>
                                 </a>
                             </li>
--->
+                            -->
                             <li>
                                 <a href="https://twitter.com/brave" target="_blank" class="tooltips" data-toggle="tooltip" data-placement="top" title="" data-original-title="Twitter">
                                     <i class="fa fa-twitter"></i>
@@ -306,56 +306,110 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
 
-<form class="form-horizontal" action="https://submit.jotform.us/submit/60194867956169/" method="post" name="form_60194867956169" id="60194867956169" accept-charset="utf-8" target="_blank" onsubmit="location.reload()">
-  <input name="formID" value="60194867956169" type="hidden">
-  <div class="form-group">
-    <label for="inputName" class="col-sm-2 control-label">Name</label>
-    <div class="col-sm-10">
-      <input name="q6_name" type="text" class="form-control" id="inputName" placeholder="Name">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-    <div class="col-sm-10">
-      <input name="q4_email" type="email" class="form-control" id="inputEmail" placeholder="Email" required aria-required="true">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <div class="checkbox">
-        <label>
-          <input class="form-checkbox" id="input_5_0" name="q5_operatingSystems[]" value="Android" type="checkbox"> Android
-        </label>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input class="form-checkbox" id="input_5_1" name="q5_operatingSystems[]" value="iOS" type="checkbox"> iOS
-        </label>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input class="form-checkbox" id="input_5_2" name="q5_operatingSystems[]" value="OS X (Mac)" type="checkbox"> OS X (Mac)
-        </label>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input class="form-checkbox" id="input_5_3" name="q5_operatingSystems[]" value="Windows" type="checkbox"> Windows
-        </label>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Submit</button>
-    </div>
-  </div>
-  <input id="simple_spc" name="simple_spc" value="60194867956169-60194867956169" type="hidden">
-  <script type="text/javascript">
-  document.getElementById("si" + "mple" + "_spc").value = "60194867956169-60194867956169";
-  </script>
-  <input value="1453431916271_60194867956169_0WLVSv5" name="event_id" type="hidden">
-</form>
+                    <!-- <form class="form-horizontal" action="https://submit.jotform.us/submit/60194867956169/" method="post" name="form_60194867956169" id="60194867956169" accept-charset="utf-8" target="_blank" onsubmit="location.reload()">
+                      <input name="formID" value="60194867956169" type="hidden">
+                      <div class="form-group">
+                        <label for="inputName" class="col-sm-2 control-label">Name</label>
+                        <div class="col-sm-10">
+                          <input name="q6_name" type="text" class="form-control" id="inputName" placeholder="Name">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                          <input name="q4_email" type="email" class="form-control" id="inputEmail" placeholder="Email" required aria-required="true">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <div class="checkbox">
+                            <label>
+                              <input class="form-checkbox" id="input_5_0" name="q5_operatingSystems[]" value="Android" type="checkbox"> Android
+                            </label>
+                          </div>
+                          <div class="checkbox">
+                            <label>
+                              <input class="form-checkbox" id="input_5_1" name="q5_operatingSystems[]" value="iOS" type="checkbox"> iOS
+                            </label>
+                          </div>
+                          <div class="checkbox">
+                            <label>
+                              <input class="form-checkbox" id="input_5_2" name="q5_operatingSystems[]" value="OS X (Mac)" type="checkbox"> OS X (Mac)
+                            </label>
+                          </div>
+                          <div class="checkbox">
+                            <label>
+                              <input class="form-checkbox" id="input_5_3" name="q5_operatingSystems[]" value="Windows" type="checkbox"> Windows
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <button type="submit" class="btn btn-default">Submit</button>
+                        </div>
+                      </div>
+                      <input id="simple_spc" name="simple_spc" value="60194867956169-60194867956169" type="hidden">
+                      <script type="text/javascript">
+                      document.getElementById("si" + "mple" + "_spc").value = "60194867956169-60194867956169";
+                      </script>
+                      <input value="1453431916271_60194867956169_0WLVSv5" name="event_id" type="hidden">
+                    </form>
+                     -->
 
+                    <form class="form-horizontal" onsubmit="postFormRequestBuild(this);return false">
+                      <input name="call" value="getbrave" type="hidden">
+                      <div class="form-group">
+                        <label for="MERGE1" class="col-sm-2 control-label">Name</label>
+                        <div class="col-sm-10">
+                          <input name="MERGE1" type="text" class="form-control" id="MERGE1" placeholder="Name">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="MERGE0" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                          <input name="MERGE0" type="email" class="form-control" id="MERGE0" placeholder="Email" required aria-required="true">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <div class="checkbox">
+                            <label>
+                              <input class="form-checkbox" id="group_1" name="group[12441][1]" value="Android" type="checkbox"> Android
+                            </label>
+                          </div>
+                          <div class="checkbox">
+                            <label>
+                              <input class="form-checkbox" id="group_2" name="group[12441][2]" value="iOS" type="checkbox"> iOS
+                            </label>
+                          </div>
+                          <div class="checkbox">
+                            <label>
+                              <input class="form-checkbox" id="group_4" name="group[12441][4]" value="OS X (Mac)" type="checkbox"> OS X (Mac)
+                            </label>
+                          </div>
+                          <div class="checkbox">
+                            <label>
+                              <input class="form-checkbox" id="group_8" name="group[12441][8]" value="Windows" type="checkbox"> Windows
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <button class="btn btn-default" id="formRequestBuildSubmit">Submit</button>
+                        </div>
+                      </div>
+                      <input value="bb73405b3f" name="MC_LIST_ID" type="hidden">
+                    </form>
+
+                    <div style="display: none" id="formRequestBuildThankYou">
+                        <div style="text-align: center;font-weight: bold">
+                            <img src="/assets/img/brave_logo_splash.png" alt="" style="width:60%" />
+                            <p style="font-size: 120%">You are now in the queue for Brave! We have a waitlist but will send you a download link soon.</p>
+                            <p style="font-size: 150%">Stay in touch! Say hi on Twitter at <a href="http://twitter.com/brave" target="_blank">@brave</a></p>
+                        </div>
+                    </div>
 
 
 
@@ -412,6 +466,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <script src="assets/js/one.app.js"></script>
     <script src="assets/js/forms/login.js"></script>
     <script src="assets/js/forms/contact.js"></script>
+    <script src="assets/js/forms/mailchimp.js"></script>
     <script src="assets/js/plugins/pace-loader.js"></script>
     <script src="assets/js/plugins/owl-carousel.js"></script>
     <script src="assets/js/plugins/revolution-slider.js"></script>
