--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -668,7 +668,8 @@ The Brave Vault can hold information that users would like to sync across device
                         </div>
                       </div>
                       <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
+                        <div class="col-sm-2">Operating Systems Used</div>
+                        <div class="col-sm-10">
                           <div class="checkbox">
                             <label>
                               <input class="form-checkbox" id="group_1" name="group[12441][1]" value="Android" type="checkbox"> Android
