--- a/public/termsofuse.html
+++ b/public/termsofuse.html
@@ -371,7 +371,8 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                       </div>
                       <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
+                        <div class="col-sm-2">Operating Systems Used</div>
+                        <div class="col-sm-10">
                           <div class="checkbox">
                             <label>
                               <input class="form-checkbox" id="group_1" name="group[12441][1]" value="Android" type="checkbox"> Android
