--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -596,7 +596,7 @@ The Brave Vault can hold information that users would like to sync across device
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Join Us on Brave</h4>
+                    <h4 class="modal-title" id="myModalLabel">Test Drive Brave (developer version)</h4>
                 </div>
                 <div class="modal-body">
 
@@ -668,7 +668,7 @@ The Brave Vault can hold information that users would like to sync across device
                         </div>
                       </div>
                       <div class="form-group">
-                        <div class="col-sm-2">Operating Systems Used</div>
+                        <label class="col-sm-2 control-label">Operating Systems Used</label>
                         <div class="col-sm-10">
                           <div class="checkbox">
                             <label>
