--- a/public/privacypolicy.html
+++ b/public/privacypolicy.html
@@ -300,7 +300,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Join Us on Brave</h4>
+                    <h4 class="modal-title" id="myModalLabel">Test Drive Brave (developer version)</h4>
                 </div>
                 <div class="modal-body">
 
@@ -372,7 +372,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                       </div>
                       <div class="form-group">
-                        <div class="col-sm-2">Operating Systems Used</div>
+                        <label class="col-sm-2 control-label">Operating Systems Used</label>
                         <div class="col-sm-10">
                           <div class="checkbox">
                             <label>
