Add disclaimer to dev timeline

--- a/public/dev_timeline.html
+++ b/public/dev_timeline.html
@@ -132,11 +132,12 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!--=== Main content ===-->
     
  <!--=== Parallax Counter v3 ===-->
-    <div class="parallax-counter-v3 parallaxBg">
+    <div class="parallax-counter-v3 parallaxBg" style="padding-bottom:10px; padding-left:10px">
         <div class="container">
             <div class="row">
-                <div class="col-md-9 col-xs-2 md-margin-bottom-50">
+                <div style="text-align:left; font-size:20px">
                    <h1>Development Timeline</h1>
+                   <p><strong>Disclaimer: This is a living document and may be updated at any time with better progress estimates.</strong></p>
                 </div>
             </div>
         </div><!--/end container-->
